--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "emp.js",
   "scripts": {
+    "start": "node emp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,6 @@
     "console.table": "^0.10.0",
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   }
 }
