--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "console.table": "^0.10.0",
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
+    "js-beautify": "^1.14.3",
     "mysql2": "^2.3.3"
   }
 }
