--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   "homepage": "https://github.com/ShawnArgent/sql-employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
-    "express": "^4.18.1",
     "inquirer": "^8.2.4",
-    "js-beautify": "^1.14.3",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16"
   }
 }
